# bytebeam-esp-idf-sdk

./: .gitignore  CMakeLists.txt  README.md  nwy_env.bat  nwy_lite_config.bat  nwy_opencpu.bat  requirements.txt
build_ota/: new.pac  old.pac
cmake/: core_config.cmake
components/bytebeam_nwy_sdk/: bytebeam_nwy_hal.c  bytebeam_nwy_logger.c  bytebeam_sdk.c
components/bytebeam_nwy_sdk/include/: bytebeam_nwy_hal.h  bytebeam_nwy_logger.h  bytebeam_sdk.h
components/include/: MQTTClient.h  MQTTLinux.h  StackTrace.h  _com_dtypes.h  app_config.h  atr_config.h  ats_config.h  boot_config.h  bt_app_config.h  bytebeam.h  bytebeam_actions.h  bytebeam_device_config.h  bytebeam_nwy_sdk.h  bytebeam_uart.h  common.h  device_config.h  diag_config.h  drv_config.h  drv_keypad.h  drv_spi.h  hal_config.h  infra_compat.h  infra_config.h  infra_defs.h  infra_types.h  json_server.h  kernel_config.h  lpa_config.h  mal_config.h  miniz.h  mqtt_api.h  nwy_adc.h  nwy_audio_api.h  nwy_ble.h  nwy_ble_client.h  nwy_camera.h  nwy_common.h  nwy_config.h  nwy_data.h  nwy_dm.h  (+48 more)
components/include/librtmp/: nwy_rtmp.h  rtmp.h
components/kernel/freertos/include/: FreeRTOSConfig.h  portmacro.h
components/lib/: fdl1.img  fdl2.img
components/mbedtls/include/: config.h  net_sockets.h
components/newlib/include/: assert.h
components/nwy/aws_mqtt/include/: aws_iot_config.h  aws_iot_log.h
components/nwy/azure_sdk/inc/azure_c_shared_utility/: agenttime.h  certs.h  xlogging.h
components/nwy/azure_sdk/inc/iothub_client/: iothub_client_version.h
components/nwy/azure_sdk/inc/iothub_client/internal/: iothub_client_ll_uploadtoblob.h
main/: Byte_beam_V1_0.c  FOTA.c  GPS.c  NETWORK.c  bytebeam_actions.c  bytebeam_cert_init.c  bytebeam_https.c  bytebeam_mqtt.c  bytebeam_persistance.c  common.c  device_config.c  json_server.c  miniz.c  send_packet_queue.c  serialize.c  uart_driver.c  uart_queue.c
prebuilts/linux/gcc-arm-none-eabi/lib/gcc/arm-none-eabi/7.2.1/: liblto_plugin.so.0
script/: build_nwy.py.bat  mqtt_pub.py  mqtt_sub.py  nwy.py
tools/: core_launch.bat  core_launch.sh  modemgen.py
tools/win32/: target-upgrade.xml
